# DCTC

./: .gitignore  CMakeLists.txt  README.md  merge_results.py  test_script.sh  test_script_1.sh  test_script_2.sh
.VSCodeCounter/2022-01-22_18-16-35/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-01-22_20-21-04/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-01-23_00-16-20/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-01-26_14-25-45/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-01-26_19-08-07/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/: utils.h
include/data_structures/: counter.h  union_find.h
include/dctc/: utils.h  utils.tpp
include/dctc/algorithms/connectivity/: communication_checker.h  orientation_checker.h  steinerize_utils.h  utils.h
include/dctc/algorithms/connectivity/Aschner/: MST_graph_Aschner.h
include/dctc/algorithms/connectivity/Lam/: MST_node_Lam.h  long_edge_first_relays_alg.h  long_short_edge_relays_alg.h  short_edge_first_relays_alg.h
include/dctc/algorithms/connectivity/Tran/: MST_Node_Tran.h  MST_graph_Tran.h  MST_node_Tran.h
include/dctc/algorithms/connectivity/relays/: relays_MST_graph.h  relays_utils.h  simple_relays_alg.h
include/dctc/algorithms/coverage/: coverage_alg.h
include/dctc/instance/: instance.h
include/dctc/network_components/edges/: edge.h
include/dctc/network_components/graphs/: MST_graph.h  graph.h
include/dctc/network_components/nodes/: DD_node.h  DO_node.h  MST_node.h  node.h  node_factory.h
include/equations/: quadratic_equation.h
include/geometric_primitives/: circle.h  convex_hull.h  geom2D.h  geom_common.h  geom_utils_1.h  geometric_2D_object.h  line2D.h  point2D.h  ray2D.h  rotation.h  sector.h  segment2D.h  vector2D.h
include/logger/: logger.h
include/random/: generator.h
logs/: err_100.txt  out_10.txt  out_100.txt  out_20.txt  out_30.txt  out_40.txt  out_50.txt  out_60.txt  out_70.txt  out_80.txt  out_90.txt
results/: .~lock.fixed_r_s.csv#  1643356956-fixed_rs-ts_060-tc_090-rs_050-rc_010.csv  Aschner_Tran_Lam.csv  Aschner_Tran_Lam_1.csv  Aschner_Tran_Lam_10.csv  Aschner_Tran_Lam_110.csv  Aschner_Tran_Lam_20.csv  Aschner_Tran_Lam_200.csv  Aschner_Tran_Lam_2021-01-26-20.ods  Aschner_Tran_Lam_2021-01-26-20.xlsx  Aschner_Tran_Lam_30.csv  Aschner_Tran_Lam_40.csv  Aschner_Tran_Lam_50.csv  Aschner_Tran_Lam_60.csv  Aschner_Tran_Lam_70.csv  Aschner_Tran_Lam_80.csv  Aschner_Tran_Lam_all.csv  fixed_r_s.csv  fixed_r_s_1 (copy).ods  fixed_r_s_1.csv  fixed_r_s_1.ods  test.xlsx  test_tmp.csv
src/: debug.cpp  main.cpp  main2.cpp  utils.cpp
src/data_structures/: counter.cpp  union_find.cpp
src/dctc/algorithms/connectivity/: communication_checker.cpp  convex_hull.cpp  utils.cpp
src/dctc/algorithms/connectivity/Aschner/: MST_graph_Aschner.cpp
src/dctc/algorithms/connectivity/Lam/: MST_node_Lam.cpp  long_edge_first_relays_alg.cpp  long_short_edge_relays_alg.cpp  short_edge_first_relays_alg.cpp
src/dctc/algorithms/connectivity/Tran/: MST_graph_Tran.cpp  MST_node_Tran.cpp
src/dctc/algorithms/connectivity/relays/: relays_MST_graph.cpp  relays_utils.cpp  simple_relays_alg.cpp
src/dctc/algorithms/coverage/: coverage_alg.cpp  strip_coverage_alg.cpp  trivial_coverage_alg.cpp
src/dctc/instance/: instance.cpp
src/dctc/network_components/edges/: edge.cpp
src/dctc/network_components/graphs/: MST_graph.cpp  graph.cpp
src/dctc/network_components/nodes/: DD_node.cpp  DO_node.cpp  MST_node.cpp  node.cpp  node_factory.cpp
src/equations/: quadratic_equation.cpp
src/geometric_primitives/: circle.cpp  convex_hull.cpp  geom2D_utils.cpp  geom_common.cpp  geometric_2D_object.cpp  line2D.cpp  point2D.cpp  ray2D.cpp  rotation.cpp  sector.cpp  segment2D.cpp  vector2D.cpp
src/logger/: logger.cpp
src/random/: generator.cpp
test/: CMakeLists.txt
test/src/: test_utils.cpp
test/src/dctc/: test_utils.cpp
test/src/dctc/algorithms/connectivity/: test_convex_hull.cpp  test_utils.cpp
test/src/dctc/algorithms/connectivity/Aschner/: test_MST_graph_Aschner.cpp
test/src/dctc/algorithms/connectivity/Tran/: test_MST_graph_Tran.cpp
test/src/dctc/algorithms/connectivity/relays/: test_all_algorithms.cpp  test_relays_MST_graph_Aschner.cpp  test_relays_MST_graph_Aschner_Tran_Lam.cpp  test_relays_MST_graph_Aschner_Tran_Lam_1.cpp  test_relays_MST_graph_Aschner_and_Tran.cpp  test_relays_MST_graph_Aschner_and_Tran_1.cpp  test_relays_MST_graph_Lam.cpp  test_relays_MST_graph_Tran.cpp  test_relays_utils.cpp  test_simple_relays_alg.cpp
test/src/dctc/algorithms/coverage/: test_coverage.cpp
test/src/dctc/instance/: test_instance.cpp
test/src/dctc/network_components/edges/: test_edge.cpp
test/src/dctc/network_components/graphs/: test_save_graph.cpp
test/src/dctc/network_components/nodes/: test_DD_node.cpp  test_DO_node.cpp  test_node.cpp
test/src/equations/: test_quadratic_equation.cpp
test/src/geometric_primitives/: test_circle.cpp  test_geom_common.cpp  test_geom_utils.cpp  test_line2D.cpp  test_point2D.cpp  test_ray2D.cpp  test_rotation.cpp  test_sector.cpp  test_segment2D.cpp  test_vector2D.cpp
test/src/random/: test_generator.cpp
visualization/: build_and_run.sh  draw_utils.h  graph.cpp  graph.h  instance.cpp  instance.h  visualize.cpp
visualization/samples/: instance.txt  mst_graph.txt  out.txt  relays_mst_graph_Aschner.txt  relays_mst_graph_Lam_LEF.txt  relays_mst_graph_Lam_SEF.txt  relays_mst_graph_Tran.txt  results.txt
visualization/samples_2/: debug_SEF.sh  instance.txt  mst_graph.txt  visualize.cpp
